# app_car_prices_mlops

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  ct.yml
docs/: API_EXAMPLES.md  DATA_DICTIONARY.md  FORMAT_BENCHMARKS.md  GOVERNANCE.md  MLOPS_GUIDE.md  MODEL_CARD.md  PIPELINE_DESIGN.md  TESTING_GUIDE.md
models/: metrics.json  model_comparison.json  price_pipeline.pkl
notebooks/: 01_business_understanding.ipynb  02_data_understanding_eda.ipynb  03_data_format_benchmarks.ipynb  04_feature_engineering.ipynb  05_model_comparison.ipynb  06_evaluation_and_selection.ipynb  07_productionisation.ipynb  09_mlops_toolkit.ipynb  api_examples.ipynb
src/car_pricing/: config.py  drift.py  explain.py  models.py  monitoring.py  registry.py  serve.py  tracking.py  tuning.py  validation.py
tests/: test_mlops.py  test_stubs.py
tools/: build_notebooks.py
