[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "car-pricing"
version = "1.0.0"
description = "End-to-end MLOps pipeline for used-car price prediction (SDLC: business KPI -> deployment)."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
